@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-23T01:04:51Z",
+  "timestamp" : "2022-07-23T08:15:03Z",
   "count_outdated" : 408,
   "uniques_outdated" : 221,
-  "count" : 432,
+  "count" : 431,
   "uniques" : 233,
   "clones" : [
     {
       "timestamp": "2022-07-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
